# tenaz

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  tenaz.py
.github/workflows/: ci.yml
tests/: test_tenaz.py
