[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tenaz"
version = "2.1.0"
description = "Tenacious retry with built-in circuit breaker. One file. Zero deps."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "tenaz contributors" }]
keywords = ["retry", "backoff", "circuit-breaker", "resilience", "async"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]

[project.urls]
Homepage = "https://github.com/ElEscribanoSilente/tenaz"
Issues = "https://github.com/ElEscribanoSilente/tenaz/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["tenaz.py", "py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]
